Fix li text alignment in mystyle.css for consistency

--- a/introduction/css/mystyle.css
+++ b/introduction/css/mystyle.css
@@ -42,6 +42,7 @@ ul {
 
 li {
   margin-bottom: 8px;
+  text-align: left;
 }
 
 img {
